Let rabbitmq authenticate through LDAP

--- a/templates/rabbitmq.config
+++ b/templates/rabbitmq.config
@@ -2,6 +2,9 @@
 % Template Path: <%= @module_name %>/templates/rabbitmq.config
 [
   {rabbit, [
+<% if @ldap_auth -%>
+    {auth_backends, [rabbit_auth_backend_internal, rabbit_auth_backend_ldap]},
+<% end -%>
 <% if @config_cluster -%>
     {cluster_nodes, [<%= @cluster_disk_nodes.map { |n| "\'rabbit@#{n}\'" }.join(', ') %>]},
 <% end -%>
@@ -21,7 +24,16 @@
     {tcp_listeners, [<%= @stomp_port %>]}<%- if @ssl_stomp_port -%>,
     {ssl_listeners, [<%= @ssl_stomp_port %>]}
 <% end -%>
+  ]}<%- if @ldap_auth -%>,
+% Configure the LDAP authentication plugin
+  {rabbitmq_auth_backend_ldap, [
+    {servers, ["<%= @ldap_server %>"]},
+    {user_dn_pattern, "<%= @ldap_user_dn_pattern %>"},
+    {use_ssl, <%= @ldap_use_ssl %>},
+    {port, <%= @ldap_port %>},
+    {log, <%= @ldap_log %>}
   ]}
+<% end -%>
 <% end -%>
 ].
 % EOF
