--- a/templates/rabbitmq.config
+++ b/templates/rabbitmq.config
@@ -27,6 +27,7 @@
   ]}<%- if @ldap_auth -%>,
 % Configure the LDAP authentication plugin
   {rabbitmq_auth_backend_ldap, [
+    {other_bind, anon},
     {servers, ["<%= @ldap_server %>"]},
     {user_dn_pattern, "<%= @ldap_user_dn_pattern %>"},
     {use_ssl, <%= @ldap_use_ssl %>},
