--- a/templates/rabbitmq.config
+++ b/templates/rabbitmq.config
@@ -18,7 +18,15 @@
 <% end -%>
     {default_user, <<"<%= @default_user %>">>},
     {default_pass, <<"<%= @default_pass %>">>}
-  ]}<%- if @config_stomp -%>,
+  ]} <% if @ssl -%>,
+% Configure management Plugin
+{rabbitmq_management,
+  [{listener, [{port,     <%= @ssl_management_port %>},
+               {ssl,      true},
+               {ssl_opts, [{certfile,   "<%= @ssl_cert %>"},
+                           {keyfile,    "<%= @ssl_key %>"}]}
+              ]}
+  ]}<% end -%><%- if @config_stomp -%>,
 % Configure the Stomp Plugin listening port
   {rabbitmq_stomp, [
     {tcp_listeners, [<%= @stomp_port %>]}<%- if @ssl_stomp_port -%>,
