--- a/templates/rabbitmq.config
+++ b/templates/rabbitmq.config
@@ -17,13 +17,15 @@
                     {fail_if_no_peer_cert,false}]},
 <% end -%>
     {default_user, <<"<%= @default_user %>">>},
-    {default_pass, <<"<%= @default_pass %>">>}
+    {default_pass, <<"<%= @default_pass %>">>},
+    {log_levels, [{connection, error}]}
   ]} <% if @ssl -%>,
 % Configure management Plugin
 {rabbitmq_management,
   [{listener, [{port,     <%= @ssl_management_port %>},
                {ssl,      true},
-               {ssl_opts, [{certfile,   "<%= @ssl_cert %>"},
+               {ssl_opts, [{cacertfile,"<%= @ssl_cacert %>"},
+                           {certfile,   "<%= @ssl_cert %>"},
                            {keyfile,    "<%= @ssl_key %>"}]}
               ]}
   ]}<% end -%><%- if @config_stomp -%>,
